--- a/number-counting/styles.css
+++ b/number-counting/styles.css
@@ -35,7 +35,7 @@ h1 {
     text-align: center;    
 }
 
-#color-el {
+#count-el {
    display: inline-block;
    margin: 1rem 0;
    font-size: 5rem;
@@ -105,7 +105,7 @@ h1 {
     h1 {
         font-size: 3rem;        
     }
-    #color-el {        
+    #count-el {        
         margin: 1.5rem 0;
         font-size: 6rem;
     }
